# EPAstrology

./: .gitignore  INVESTIGATION.md  Makefile  POSITION_SPECIFIC_RESULTS.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  test_projections.csv
data/: .gitkeep
data/db/: .gitkeep
data/models/: role_model_gbm_pos.joblib
data/parquet/: .gitkeep
src/nflproj/: __init__.py  analyze_targets.py  backtest.py  build_tables.py  cli.py  config.py  db.py  diagnostics.py  features.py  ingest.py  models.py  models_improved.py
tests/: __init__.py  test_features.py  test_shrinkage.py
