[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nflproj"
version = "0.1.0"
description = "NFL offense player projection system with role + efficiency modeling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.9.0",
    "nfl-data-py>=1.0.0",
    "typer>=0.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=12.0.0",
    "rich>=13.0.0",
]

[project.scripts]
nflproj = "nflproj.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
